add eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,30 @@
 {
+  "env": {
+    "browser": true,
+    "es6": true
+  },
   "extends": [
     "next",
     "prettier",
-    "next/core-web-vitals"
-  ]
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:@next/next/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "react/react-in-jsx-scope": "off"
+  }
 }
