--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint-config-prettier": "^9.1.0",
     "next": "14.2.5",
-    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -21,6 +19,9 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
     "typescript": "^5"
   }
 }
