--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.1",
+    "antd": "^5.20.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
