--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint:strict": "eslint */**/*.{js,jsx,ts,tsx}",
     "format": "prettier --write */**/*.{js,jsx,ts,tsx,scss,css,md}",
     "prepare": "husky install",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "e2e:chrome": "cypress run --browser chrome",
+    "cy:merge": "npx mochawesome-merge 'cypress/results/*.json' > mochawesome.json",
+    "cy:generate": "npx marge mochawesome.json"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
@@ -35,6 +38,9 @@
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "prettier": "^3.3.3",
     "typescript": "^5"
   }
