add a workflow step to save screenshots

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
           start: npm start
       - name: Save screenshots
         uses: actions/upload-artifact@v3
+        if: always()
         with:
           name: cypress-screenshots
           path: cypress/screenshots
