add chrome browser to run cypress tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           build: npm run build
           start: npm start
+          browser: chrome
       - name: Save screenshots
         uses: actions/upload-artifact@v3
         if: always()
