--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,10 @@ jobs:
         with:
           name: cypress-screenshots
           path: cypress/screenshots
+      - name: Save videos
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+          rentention-days: 2
