enable video recording on cypress

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           name: cypress-videos
           path: cypress/videos
-          rentention-days: 2
+          retention-days: 2
