--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,18 +18,18 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           browser: chrome
-          record: true
+          record: false
           start: npm run dev
           wait-on: 'http://localhost:3000'
 
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
-          CYPRESS_ENV: 'production'
-          CYPRESS_CI: 'true'
-          CYPRESS_VIDEO: 'true'
-          CYPRESS_USER_EMAIL: ${{ secrets.CYPRESS_USER_EMAIL }}
-          CYPRESS_USER_PASSWORD: ${{ secrets.CYPRESS_USER_PASSWORD }}
+        # env:
+        #   CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+        #   CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
+        #   CYPRESS_ENV: 'production'
+        #   CYPRESS_CI: 'true'
+        #   CYPRESS_VIDEO: 'true'
+        #   CYPRESS_USER_EMAIL: ${{ secrets.CYPRESS_USER_EMAIL }}
+        #   CYPRESS_USER_PASSWORD: ${{ secrets.CYPRESS_USER_PASSWORD }}
 
 
   build:
