--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,36 +1,34 @@
-name: Deploy 
+name: Deploy
 on:
   workflow_dispatch:
   push:
-    branches:
-      dev
+    branches: dev
 
 jobs:
-  test:
-    runs-on: ubuntu-22.04
-    container:
-      image: cypress/browsers:node-20.9.0-chrome-118.0.5993.88-1-ff-118.0.2-edge-118.0.2088.46-1
-      options: --user 1001
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
-          browser: chrome
-          record: false
-          start: npm run dev
-          wait-on: 'http://localhost:3000'
+  # test:
+  #   runs-on: ubuntu-22.04
+  #   container:
+  #     image: cypress/browsers:node-20.9.0-chrome-118.0.5993.88-1-ff-118.0.2-edge-118.0.2088.46-1
+  #     options: --user 1001
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - name: Cypress run
+  #       uses: cypress-io/github-action@v6
+  #       with:
+  #         browser: chrome
+  #         record: false
+  #         start: npm run dev
+  #         wait-on: 'http://localhost:3000'
 
-        # env:
-        #   CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-        #   CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
-        #   CYPRESS_ENV: 'production'
-        #   CYPRESS_CI: 'true'
-        #   CYPRESS_VIDEO: 'true'
-        #   CYPRESS_USER_EMAIL: ${{ secrets.CYPRESS_USER_EMAIL }}
-        #   CYPRESS_USER_PASSWORD: ${{ secrets.CYPRESS_USER_PASSWORD }}
-
+  # env:
+  #   CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+  #   CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
+  #   CYPRESS_ENV: 'production'
+  #   CYPRESS_CI: 'true'
+  #   CYPRESS_VIDEO: 'true'
+  #   CYPRESS_USER_EMAIL: ${{ secrets.CYPRESS_USER_EMAIL }}
+  #   CYPRESS_USER_PASSWORD: ${{ secrets.CYPRESS_USER_PASSWORD }}
 
   build:
     needs: test
@@ -40,9 +38,8 @@ jobs:
     steps:
       - name: Generate tag
         id: tag
-        run: 
-          echo "TAG=$(date +'%y-%m-%d-%H-%M-%S')" >> $GITHUB_ENV  
-      
+        run: echo "TAG=$(date +'%y-%m-%d-%H-%M-%S')" >> $GITHUB_ENV
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -57,52 +54,32 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/lakehouseenterprise-website:latest
-          
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout master
-      uses: actions/checkout@main
-    - name: Install doctl
-      uses: digitalocean/action-doctl@v2
-      with:
-        token: '${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}'
-  
-    - name: Update deployment file
-      run: |
-        sed -i "s|<IMAGE_NAME>:<TAG>|nexttechglobe/lakehouseenterprise-website:latest|g" $GITHUB_WORKSPACE/config/deployment.yaml
-        cat $GITHUB_WORKSPACE/config/deployment.yaml
-    - name: Image path
-      run : |
+      - name: Checkout master
+        uses: actions/checkout@main
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: '${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}'
+
+      - name: Update deployment file
+        run: |
+          sed -i "s|<IMAGE_NAME>:<TAG>|nexttechglobe/lakehouseenterprise-website:latest|g" $GITHUB_WORKSPACE/config/deployment.yaml
+          cat $GITHUB_WORKSPACE/config/deployment.yaml
+      - name: Image path
+        run: |
           echo  ${{ secrets.DOCKER_USERNAME }}/lakehouseenterprise-website:latest
 
-  
-    - name: Save DigitalOcean kubeconfig with short-lived credentials
-      run: >-
-        doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{secrets.CLUSTER_NAME }}
-    - name: Deploy to DigitalOcean Kubernetes
-      run: |
-        kubectl delete -f $GITHUB_WORKSPACE/config/deployment.yaml
-        kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yaml
-    - name: Verify deployment
-      run: kubectl rollout status deployment/lakehouseenterprise-backend
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      - name: Save DigitalOcean kubeconfig with short-lived credentials
+        run: >-
+          doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{secrets.CLUSTER_NAME }}
+      - name: Deploy to DigitalOcean Kubernetes
+        run: |
+          kubectl delete -f $GITHUB_WORKSPACE/config/deployment.yaml
+          kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yaml
+      - name: Verify deployment
+        run: kubectl rollout status deployment/lakehouseenterprise-backend
